# typedb-behaviour

./: .bazelrc  .gitignore  BUILD  BZLMOD_MIGRATION_STATUS.md  MODULE.bazel  README.md  WORKSPACE
.circleci/: config.yml
.factory/: automation.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.grabl/: automation.yml
behaviour/concept/: BUILD
behaviour/connection/: BUILD  database.feature  keyspace.feature  session.feature  transaction.feature
concept/: BUILD  serialization.feature
concept/migration/: BUILD  data-validation.feature  function.feature  migration.feature
concept/rule/: BUILD  rule.feature
concept/serialization/: BUILD  json.feature
concept/thing/: BUILD  attribute.feature  entity.feature  has.feature  links.feature  relation.feature  roleplayer.feature
concept/type/: BUILD  attribute-type.feature  attributetype.feature  entitytype.feature  owns-annotations.feature  owns.feature  plays.feature  relation-type.feature  relationtype.feature  thingtype.feature
concept/validation/: BUILD  data-validation.feature  function.feature  migration.feature  schema-validation.feature
connection/: BUILD  database.feature  keyspace.feature  session.feature  transaction.feature  user.feature
dependencies/graknlabs/: dependencies.bzl  repositories.bzl
dependencies/maven/: BUILD  artifacts.bzl  artifacts.snapshot  dependencies.bzl  dependencies.yaml  update.sh
dependencies/typedb/: repositories.bzl
dependencies/vaticle/: repositories.bzl
driver/: BUILD  cluster.feature  concept.feature  connection.feature  driver.feature  migration.feature  query.feature  user.feature
driver/http/: BUILD  http.feature
graql/: compute.feature  delete.feature  get.feature  match.feature  undefine.feature
graql/analytics/: BUILD
graql/explanation/: BUILD  language.feature  reasoner.feature
graql/language/: BUILD  compute.feature  define.feature  delete.feature  get.feature  insert.feature  match.feature  rule-validation.feature  undefine.feature  update.feature
graql/reasoner/: BUILD  arithmetic-equality.feature  attribute-attachment.feature  compound-queries.feature  concept-inequality.feature  negation.feature  recursion.feature  relation-inference.feature  resolution-test-framework.feature  roleplayer-attachment.feature  rule-interaction.feature  schema-queries.feature  type-generation.feature  type-hierarchy.feature  value-predicate.feature  variable-roles.feature
query/analyze/: BUILD  annotations.feature  structure.feature
query/explanation/: BUILD  language.feature  reasoner.feature
query/functions/: BUILD  basic.feature  body-structure.feature  definition.feature  movemetoquery-negation.feature  negation.feature  recursion.feature  signature.feature  structure.feature  usage.feature
query/language/: BUILD  define.feature  delete.feature  disjunction.feature  expression.feature  fetch.feature  get.feature  given.feature  inputs.feature  insert.feature  match.feature  metadata.feature  modifiers.feature  negation.feature  optional.feature  pipelines.feature  put.feature  redefine.feature  reduce.feature  rule-validation.feature  type-inference.feature  undefine.feature  update.feature  validation.feature  variables.feature
query/reasoner/: BUILD  attribute-attachment.feature  basic.feature  body-structure.feature  call-positions.feature  compound-queries.feature  concept-inequality.feature  multi-stage.feature  negation.feature  recursion.feature  relation-inference.feature  rule-interaction.feature  schema-queries.feature  type-hierarchy.feature  value-predicate.feature  variable-roles.feature
resolution/: BUILD  Resolution.java
resolution/common/: BUILD  StatementContainer.java  Utils.java
resolution/complete/: BUILD  Completer.java  InstanceManager.java  SchemaManager.java  completion_schema.gql
resolution/kbcomplete/: BUILD  Completer.java  SchemaManager.java
resolution/kbtest/: BUILD  ResolutionBuilder.java
resolution/resolve/: QueryBuilder.java
resolution/test/: BUILD  GraknForTest.java  LoadTest.java  QueryBuilderIT.java  ResolutionBuilderIT.java  TestCompleter.java  TestQueryBuilder.java  TestResolution.java  TestResolutionBuilder.java  TestSchemaManager.java
theory/: BUILD  README.md
theory/semantics/: graql.md  graql_domain_first_attempt.md  kg_domain_theoretic.md  kg_partial_order.md  kg_semiformal_definitions.md  theorems.md
theory/subsumption/: subsumption.md
tools/: BUILD
tools/integrity/: BUILD  IntegrityException.java  NoDuplicateSet.java  PartialFunction.java  RejectDuplicateSet.java  SemanticSet.java  TotalFunction.java  Type.java  Validatable.java  Validator.java
tools/operator/: BUILD  GeneraliseAttributeOperator.java  IdFuzzyingOperator.java  IdentityOperator.java  Operator.java  Operators.java  PropertyVariableTransform.java  RemoveRelationOperator.java  RemoveRoleplayerOperator.java  RemoveSubstitutionOperator.java  RoleGeneraliseOperator.java  TypeContext.java  (+3 more)
(+120 files in other folders)
