# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

module(
    name = "typedb_behaviour",
    version = "0.0.0",
    compatibility_level = 1,
)

# ===========================================================
# Common
# ===========================================================

bazel_dep(name = "bazel_skylib", version = "1.7.1")

# ===========================================================
# Languages & toolchains
# ===========================================================

# Python
bazel_dep(name = "rules_python", version = "1.0.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

# Kotlin
bazel_dep(name = "rules_kotlin", version = "2.0.0")
register_toolchains("@rules_kotlin//kotlin/internal:default_toolchain")

# ===========================================================
# TypeDB repos
# ===========================================================

bazel_dep(name = "typedb_dependencies", version = "0.0.0")
git_override(
    module_name = "typedb_dependencies",
    remote = "https://github.com/typedb/dependencies",
    commit = "a798dc0869d494bf0c7b033ee226df2efbef2830",
)

bazel_dep(name = "typedb_bazel_distribution", version = "0.0.0")
git_override(
    module_name = "typedb_bazel_distribution",
    remote = "https://github.com/typedb/bazel-distribution",
    commit = "a6363bf0b6208cabcfbf8865601e9eb03641559f",
)
